--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -1,37 +1,118 @@
-@use 'variables' as vars;
+@use 'variables' as *;
 
 // H1 heading mixin
-@mixin heading-h1 {
-  font-family: vars.$font-heading;
+@mixin title-xxl {
+  font-family: $font-heading;
   font-size: clamp(48px, 5vw, 80px);
   font-style: normal;
   font-weight: 500;
   line-height: 120%;
   letter-spacing: -0.8px;
-  color: vars.$color-white;
+  color: $color-white;
 }
 
 
 // Heading XL
-@mixin heading-xl {
-  font-family: vars.$font-heading;
+@mixin title-xl {
+  font-family: $font-heading;
   font-weight: 500;
   font-style: normal;
-  line-height: vars.$heading-xl-line;
-  letter-spacing: vars.$heading-xl-letter;
+  line-height: $line-height-heading;
+  letter-spacing: $letter-spacing-subtitle;
+  font-size: clamp(32px, 4vw + 12px, 56px);
+}
 
-  // Responsive font size
-  font-size: clamp(32px, 4vw, vars.$heading-xl);
+// Subtitle
+@mixin subtitle {
+  font-family: $color-black;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  font-family: Poppins;
+  font-size: clamp(16px, 1vw + 12px, 24px);
+  font-style: normal;
+  line-height: 150%;
+  letter-spacing: 0.12px;
 }
 
 // Paragraph / Body Text
 @mixin body-text {
-  font-family: vars.$font-primary;
+  font-family: $font-primary;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: vars.$line-height-body;
-  letter-spacing: vars.$letter-spacing-body;
-  color: vars.$color-black;
-  text-align: center; // optional, can override
+  line-height: $line-height-body;
+  letter-spacing: $letter-spacing-body;
+  color: $color-black;
+  color: $color-dark-gray;
+}
+
+// Primary button mixin
+@mixin btn-primary {
+  display: inline-flex;
+  align-items: center;
+  gap: 12px;
+  font-family: $font-heading;
+  font-size: clamp(14px, 1vw + 10px, 16px);
+  font-weight: 400;
+  padding: 10px 1.5rem;
+  border: none;
+  border-radius: 98px;
+  color: $color-white;
+  background-color: $color-primary;
+  cursor: pointer;
+  text-align: center;
+  transition: $btn-transition;
+  text-decoration: none;
+  margin-bottom: 0;
+  flex-shrink: 0;
+
+  svg {
+    width: 32px;
+    height: 32px;
+    background-color: $color-white;
+    border-radius: 50%;
+    transition: $btn-transition;
+    padding: 8px;
+
+    path {
+      fill: $color-primary;
+      transition: $btn-transition;
+    }
+  }
+
+  &:hover {
+    background-color: $color-white;
+    color: $color-primary;
+
+    svg {
+      background-color: $color-primary;
+
+      path {
+        fill: $color-white;
+      }
+    }
+  }
+}
+
+
+// Button Phone
+@mixin btn-phn {
+  background: $color-white;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  padding: 5px;
+  display: grid;
+  place-items: center;
+  margin: 0;
+  flex-shrink: 0;
+
+  &:hover {
+    background: $color-primary;
+
+    svg path {
+      fill: $color-white;
+    }
+  }
 }
