--- a/assets/scss/abstracts/_spacing.scss
+++ b/assets/scss/abstracts/_spacing.scss
@@ -1,12 +1,26 @@
-// Spacing scale
-$space-0: 0;
-$space-1: 4px;
-$space-2: 8px;
-$space-3: 12px;
-$space-4: 16px;
-$space-5: 24px;
-$space-6: 32px;
-$space-7: 40px;
-$space-8: 48px;
-$space-9: 64px;
-$space-10: 80px;
+// ------------------------
+// Spacing scale (4px increments)
+// ------------------------
+$spaces: (
+    0: 0px,
+    1: 4px,
+    2: 8px,
+    3: 12px,
+    4: 16px,
+    5: 20px,
+    6: 24px,
+    7: 28px,
+    8: 32px,
+    9: 36px,
+    10: 40px,
+    11: 44px,
+    12: 48px,
+    13: 52px,
+    14: 56px,
+    15: 60px,
+    16: 64px,
+    17: 68px,
+    18: 72px,
+    19: 76px,
+    20: 80px
+);
